force-app/main/default/objects/TrailForge_Access_Code__c/TrailForge_Access_Code__c.object-meta.xml
<CustomObject>
    <description>Stores one-time access codes for TrailForge external users to authenticate against a Contact record.</description>
    <label>TrailForge Access Code</label>
    <nameField>
        <displayFormat>TAC-{0000}</displayFormat>
        <label>Access Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrailForge Access Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>