force-app/main/default/objects/TrailForge_Access_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The unique access code string (e.g., TF-XXXX-XXXX).</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>