force-app/main/default/objects/TrailForge_Access_Code__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact this access code is associated with.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TrailForge Access Codes</relationshipLabel>
    <relationshipName>TrailForge_Access_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>