force-app/main/default/objects/TrailForge_Access_Code__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>When this access code expires and can no longer be used.</description>
    <label>Expires On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>