force-app/main/default/objects/TrailForge_Access_Code__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this access code is currently active and can be used.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>