force-app/main/default/objects/TrailForge_Access_Code__c/fields/Is_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this access code has been used (burned).</description>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>