force-app/main/default/objects/TrailForge_Access_Code__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who issued this access code.</description>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TrailForge_Access_Codes_Issued</relationshipName>
    <type>Lookup</type>
</CustomField>