force-app/main/default/objects/TrailForge_Access_Code__c/fields/Issued_On__c.field-meta.xml
<CustomField>
    <fullName>Issued_On__c</fullName>
    <description>When this access code was issued.</description>
    <label>Issued On</label>
    <type>DateTime</type>
</CustomField>