force-app/main/default/objects/TrailForge_Access_Code__c/fields/Used_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Used_Fingerprint__c</fullName>
    <description>Client fingerprint/identifier recorded when the code was used.</description>
    <label>Used Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>