force-app/main/default/objects/TrailForge_Access_Code__c/fields/Used_On__c.field-meta.xml
<CustomField>
    <fullName>Used_On__c</fullName>
    <description>When this access code was used (burned).</description>
    <label>Used On</label>
    <type>DateTime</type>
</CustomField>